[package]
name = "git-rust"
version = "0.1.0"
authors = ["Qianmian Yu <im.qianmian.yu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
flate2 = "1.0.14"

[lib]
name="git"
path="src/lib.rs"

[[bin]]
name="git"
path="src/main.rs"
