[package]
name = "git-rust"
version = "0.1.0"
authors = ["Qianmian Yu <im.qianmian.yu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/", rev = "89a47640c618731f725781b0f1c52b5cc60ab974" }
flate2 = "1.0.14"
sha-1 = "0.8.2"
hex = "0.3.1"
byteorder = "1"
itertools = "0.9.0"

[lib]
name="git"
path="src/lib.rs"

[[bin]]
name="git"
path="src/main.rs"
